--- a/index.html
+++ b/index.html
@@ -12,20 +12,18 @@
         <div class="left-side">
             <div class="logo">
                 LOGO
-        </div>
-             <ul class="links">
+            </div>
+            <ul class="links">
                 <li><a href="google.com">link-one</a></li>
                 <li><a href="google.com">link-two</a></li>
                 <li><a href="google.com">link-three</a></li>
             </ul>
         </div>
         <div class="right-side">
-            <ul class="purple-buttons">
-                <li><button class="notifications">
-                    1 new notification
-                </button></li>
-                <li><div class="profile-image"></div></li>
-            </ul>    
+            <button class="notifications">
+                1 new notification
+                </button>
+                <div class="profile-image"></div>    
         </div>
     </div>
   </body>
